--- a/index.html
+++ b/index.html
@@ -3,22 +3,39 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Coach-AI</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <header class="container header">
+    <header class="header">
+      <div class="container">
       <nav class="nav">
         <ul class="nav__list">
-          <li class="nav__item">
-            <a href="./index.html" class="nav__link">Головна</a>
-          </li>
-          <li class="nav__item">
-            <a href="./coach.html" class="nav__link">Почати навчання</a>
-          </li>
-          <li class="nav__item"><a href="" class="nav__link">Мова сайту</a></li>
+          <li><a class="nav__link" href="./index.html">Головна</a></li>
+          <li><a class="nav__link" href="./coach.html">Почати навчання</a></li>
+          <li><a
+                class="nav__link dropdown-toggle"
+                href="#"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Мова сайту
+              </a>
+              <ul class="dropdown-menu dropdown-menu-end">
+                <li><a class="menu-item" href="./index.html">Українська</a></li>
+                <li>
+                  <a class="menu-item" href="./eng-index.html">English</a>
+                </li>
+              </ul></li>
         </ul>
       </nav>
+      </div>
     </header>
     <main>
       <section class="hero">
@@ -76,7 +93,7 @@
             вдосконалити знання з предметів та зробити процес навчання
             захопливим.
           </p>
-          <button class="hero__btn">Почати навчання</button>
+          <a class="hero__btn" href="./coach.html">Почати навчання</a>
         </div>
       </section>
       <section class="container about">
@@ -113,7 +130,7 @@
           </p>
         </div>
       </section>
-      <!-- <section class="container for">
+      <section class="container for">
         <h2 class="section__title">Для кого створений ШІ-репетитор?</h2>
         <ul class="for__list">
           <li class="for__item">
@@ -131,8 +148,8 @@
             </p>
           </li>
         </ul>
-      </section> -->
-      <!-- <section class="container advant">
+      </section>
+      <section class="container advant">
         <h2 class="section__title">Чому варто обрати саме нас?</h2>
         <ul class="advant__list">
           <li class="advant__item">
@@ -170,14 +187,14 @@
             </p>
           </li>
         </ul>
-      </section> -->
-      <!-- <section class="container support">
+      </section>
+      <section class="container support">
         <h2 class="support__title">Підтримайте проєкт</h2>
         <button class="support__btn">
           <img src="" alt="" class="support__btn__img" />
           <p class="support__btn__text">Підтримати проєкт</p>
         </button>
-      </section> -->
+      </section>
     </main>
     <!-- <footer class="container footer">
       <ul class="footer__list">
@@ -192,5 +209,22 @@
         </li>
       </ul>
     </footer> -->
+    <script src="./script.js"></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVpZVfvYPNcxl9yqGAQJtK/QltBqQ/2RHR"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XFwbbLwaJvX/FJqYx5c5W2t7cKSOhTO4rXz+uHPwzWfgyvZ6FfKq/AI"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
