--- a/eng-index.html
+++ b/eng-index.html
@@ -199,7 +199,7 @@ achievements motivate you to move forward.
         </button>
       </section>
     </main>
-    <footer class="container footer">
+    <!-- <footer class="container footer">
       <ul class="footer__list">
         <li class="footer__item">
           <a href="" class="footer__a">Coach-AI</a>
@@ -211,7 +211,7 @@ achievements motivate you to move forward.
           <a href="" class="footer__a">Social media</a>
         </li>
       </ul>
-    </footer>
+    </footer> -->
     <script src="./script.js"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script
