--- a/coach.html
+++ b/coach.html
@@ -69,7 +69,7 @@
     </div>
 
     <script>
-        const RENDER_API_URL = "https://coach-ai-4oc0.onrender.com/api/ai-query";
+        const RENDER_API_URL = "https://coach-ai-4oc0.onrender.com/query";
         
         const chatWindow = document.getElementById('chat-window');
         const chatForm = document.getElementById('chat-form');
