did a litle frontend

--- a/coach.html
+++ b/coach.html
@@ -89,7 +89,7 @@
             // Додаємо ім'я
             const senderName = document.createElement('p');
             senderName.className = 'message-sender';
-            senderName.textContent = sender === 'user' ? 'Ви' : 'AI Асистент';
+            senderName.textContent = sender === 'user' ? 'Ви' : 'ШІ-репетитор';
             
             const messageText = document.createElement('p');
             messageText.innerHTML = text; 
