--- a/index.html
+++ b/index.html
@@ -1,40 +1,39 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coach-AI</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <header class="header">
       <div class="container">
-      <nav class="nav">
-        <ul class="nav__list">
-          <li><a class="nav__link" href="./index.html">Головна</a></li>
-          <li><a class="nav__link" href="./coach.html">Почати навчання</a></li>
-          <li><a
-                class="nav__link dropdown-toggle"
-                href="#"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Мова сайту
-              </a>
-              <ul class="dropdown-menu dropdown-menu-end">
-                <li><a class="menu-item" href="./index.html">Українська</a></li>
-                <li>
-                  <a class="menu-item" href="./eng-index.html">English</a>
-                </li>
-              </ul></li>
-        </ul>
-      </nav>
+        <nav class="nav">
+          <ul class="nav__list">
+            <li class="nav__item"><a class="nav__link" href="./index.html">Головна</a></li>
+            <li class="nav__item">
+              <a class="nav__link" href="./coach.html">Почати навчання</a>
+            </li>
+            <li class="nav__item">
+              <label class="nav__link" for="lang">Мова сайту:</label>
+              <select class="lang" id="lang" name="lang" onchange="window.location.href = this.value;">
+                <option value="./index.html">
+                  Українська
+                </option>
+                <option value="./eng-index.html">
+                  English
+                </option>
+              </select>
+            </li>
+          </ul>
+        </nav>
       </div>
     </header>
     <main>
@@ -84,8 +83,12 @@
               />
             </defs>
           </svg>
-          <div class="hero__blur1"><img class="hero__blur1__img" src="./images/blur1.png" alt=""></div>
-          <div class="hero__blur2"><img class="hero__blur2__img" src="./images/blur2.png" alt=""></div>
+          <div class="hero__blur1">
+            <img class="hero__blur1__img" src="./images/blur1.png" alt="" />
+          </div>
+          <div class="hero__blur2">
+            <img class="hero__blur2__img" src="./images/blur2.png" alt="" />
+          </div>
           <h1 class="hero__title">Освітній ШІ-репетитор у твоєму браузері.</h1>
           <p class="hero__text">
             Сьогодні навчання може бути досить непростим. Але тепер поруч є
@@ -109,14 +112,19 @@
           </p>
         </div>
         <div class="about__robot">
-          <img class="about__robot__img" src="./images/hero-img.png" alt="" />
+          <img
+            class="about__robot__img"
+            src="./images/about-robot.png"
+            alt=""
+          />
         </div>
         <div class="ability">
           <h2 class="about__title">Що вміє бот?</h2>
           <p class="about__text">
             Наш ШІ-репетитор створений для того, щоб допомогти вам<b
               class="about__text__bold"
-              >подолати прогалини у навчанні</b
+            >
+              подолати прогалини у навчанні</b
             >. Він оцінює ваш рівень знань, визначає слабкі й сильні сторони та
             створює
             <b class="about__text__bold">персоналізований план навчання</b> саме
@@ -131,13 +139,13 @@
         </div>
       </section>
       <section class="container for">
-        <h2 class="section__title">Для кого створений ШІ-репетитор?</h2>
+        <h2 class="for__title">Для кого створений ШІ-репетитор?</h2>
         <ul class="for__list">
           <li class="for__item">
-            <h3 class="for__item__h3">Для студентів: 18-24</h3>
+            <h3 class="for__item__h3">Для учнів 11 класів</h3>
             <p class="for__item__text">
-              Надаємо підтримку у вивченні складних тем, адаптації до
-              академічного середовища або покращення навичок тайм-менеджменту.
+              ШІ-репетитор допомагає з підготовкою до НМТ. Знаходить і допомагає
+              заповнити прогалини в необхідних для НМТ знаннях.
             </p>
           </li>
           <li class="for__item">
@@ -211,20 +219,5 @@
     </footer> -->
     <script src="./script.js"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVpZVfvYPNcxl9yqGAQJtK/QltBqQ/2RHR"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-      integrity="sha384-0pUGZvbkm6XFwbbLwaJvX/FJqYx5c5W2t7cKSOhTO4rXz+uHPwzWfgyvZ6FfKq/AI"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
